<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory 
        android:title="@string/pref_conectivity"
        android:key="pref_key_datausage_settings">
	    <CheckBoxPreference
	        android:key="pref_datausage_mobiledata"
	        android:title="@string/pref_datausage_mobiledata"
	        android:summary="@string/pref_datausage_mobiledata_summ"
	        android:defaultValue="true"
	        android:enabled="true" />
	    <CheckBoxPreference
	        android:key="pref_datausage_autoupdate"
	        android:title="@string/pref_datausage_autoupdate"
	        android:summary="@string/pref_datausage_autoupdate_summ"
	        android:defaultValue="true"
	        android:enabled="false" />
	</PreferenceCategory>
	<PreferenceCategory 
        android:title="@string/pref_alarm"
        android:key="pref_key_alarm_settings">
	    <CheckBoxPreference 
	        android:key="pref_alarm_enabled"
	        android:title="@string/pref_alarm_expirering_enabled"
	        android:summary="@string/pref_alarm_expirering_enabled_summ"
	        android:defaultValue="true"
	        android:enabled="false" />
		<RingtonePreference
			android:key="pref_alarm"
			android:title="@string/pref_alarm_expire_ring"
			android:ringtoneType="notification"
			android:showDefault="false"
			android:showSilent="false"
			android:enabled="false" />
		<!-- <Preference android:title="@string/logout" >
		    <intent android:action="android.intent.category.HOME"/>
		</Preference> -->
	</PreferenceCategory>
</PreferenceScreen>