<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:gravity="center_vertical|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.fe.up.joao.busphoneclient.RegisterActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/form_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_email"
        android:inputType="textEmailAddress">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/form_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_pw"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/form_pw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_pw_repeat"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/form_ccnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_ccnum"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="158dp"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/form_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/form_cc_mês"
            android:inputType="number" />

        <EditText
            android:id="@+id/form_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/form_cc_year"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/form_cvv"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_cccod"
        android:inputType="number" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        

        <Button
            android:id="@+id/button_cancel_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelAction"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_createAccount"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="createAccountAction"
            android:text="@string/create" />

    </LinearLayout>

</LinearLayout>