<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/t1_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/t1_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/t1_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginTop="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/t2_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/t2_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/t2_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginTop="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/t3_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/t3_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <NumberPicker
                android:id="@+id/t3_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/total_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euros"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_cancel_buy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelBuyTickets"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_buy_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buyTickets"
            android:text="@string/buy" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/promotion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>